--- a/src/mixins/tabs/settings.pug
+++ b/src/mixins/tabs/settings.pug
@@ -79,19 +79,19 @@ mixin settingsTab()
                         el-radio-group(v-model="autoUpdateVRCX" size="mini" style="margin-top:5px")
                             el-radio-button(label="Off") {{ $t('view.settings.general.vrcx_updater.auto_update_off') }}
                             el-radio-button(label="Notify") {{ $t('view.settings.general.vrcx_updater.auto_update_notify') }}
-                            el-radio-button(label="Auto Download" :disabled="isLinux") {{ $t('view.settings.general.vrcx_updater.auto_update_download') }}
+                            el-radio-button(label="Auto Download") {{ $t('view.settings.general.vrcx_updater.auto_update_download') }}
                 //- General | Application
                 +simpleSettingsCategory("view.settings.general.application.header")
-                    template(v-if="!isLinux")
+                    template(v-if="!isLinux()")
                         +simpleSwitch("view.settings.general.application.startup", "isStartAtWindowsStartup", "saveVRCXWindowOption")
                     +simpleSwitch("view.settings.general.application.minimized", "isStartAsMinimizedState", "saveVRCXWindowOption")
                     +simpleSwitch("view.settings.general.application.tray", "isCloseToTray", "saveVRCXWindowOption")
-                    div.options-container-item(v-if="!isLinux")
+                    div.options-container-item(v-if="!isLinux()")
                         span.name {{ $t('view.settings.general.application.disable_gpu_acceleration') }}
                             el-tooltip(placement="top" style="margin-left:5px" :content="$t('view.settings.general.application.disable_gpu_acceleration_tooltip')")
                                 i.el-icon-info
                         el-switch(v-model="disableGpuAcceleration" @change="saveVRCXWindowOption")
-                    div.options-container-item(v-if="!isLinux")
+                    div.options-container-item(v-if="!isLinux()")
                         span.name {{ $t('view.settings.general.application.disable_vr_overlay_gpu_acceleration') }}
                             el-tooltip(placement="top" style="margin-left:5px" :content="$t('view.settings.general.application.disable_gpu_acceleration_tooltip')")
                                 i.el-icon-info
@@ -349,7 +349,7 @@ mixin settingsTab()
                             el-radio-button(label="Game Running") {{ $t('view.settings.notifications.notifications.conditions.inside_vrchat') }}
                             el-radio-button(label="Game Closed") {{ $t('view.settings.notifications.notifications.conditions.outside_vrchat') }}
                             el-radio-button(label="Always") {{ $t('view.settings.notifications.notifications.conditions.always') }}
-                    template(v-if="!isLinux")
+                    template(v-if="!isLinux()")
                         div.options-container-item
                             +simpleSwitch("view.settings.notifications.notifications.steamvr_notifications.steamvr_overlay", "openVR", "saveOpenVROption")
                         div.options-container-item
@@ -358,7 +358,7 @@ mixin settingsTab()
                         div.options-container-item
                             el-button(size="small" icon="el-icon-rank" @click="showNotificationPositionDialog" :disabled="!overlayNotifications || !openVR") {{ $t('view.settings.notifications.notifications.steamvr_notifications.notification_position') }}
                     div.options-container-item
-                        span.name(v-if="!isLinux") {{ $t('view.settings.notifications.notifications.steamvr_notifications.xsoverlay_notifications') }}
+                        span.name(v-if="!isLinux()") {{ $t('view.settings.notifications.notifications.steamvr_notifications.xsoverlay_notifications') }}
                         span.name(v-else) {{ $t('view.settings.notifications.notifications.steamvr_notifications.wlxoverlay_notifications') }}
                         el-switch(v-model="xsNotifications" @change="saveOpenVROption")
                     div.options-container-item
@@ -418,7 +418,7 @@ mixin settingsTab()
                             el-input(type="textarea" v-model="notificationTTSTest" :placeholder="$t('view.settings.notifications.notifications.text_to_speech.tts_test_placeholder')" :rows="1" style="width:175px;display:inline-block")
                             el-button(size="small" icon="el-icon-video-play" @click="testNotificationTTS" style="margin-top:5px") {{ $t('view.settings.notifications.notifications.text_to_speech.play') }}
             //- Wrist Overlay Tab
-            el-tab-pane(:label="$t('view.settings.category.wrist_overlay')" v-if="!isLinux")
+            el-tab-pane(:label="$t('view.settings.category.wrist_overlay')" v-if="!isLinux()")
                 //- Wrist Overlay | SteamVR Wrist Overlay
                 div.options-container(style="margin-top:0")
                     span.header {{ $t('view.settings.wrist_overlay.steamvr_wrist_overlay.header') }}
@@ -532,7 +532,7 @@ mixin settingsTab()
                         span.name(style="min-width:300px") {{ $t('view.settings.advanced.advanced.relaunch_vrchat.description') }}
                         el-switch(v-model="relaunchVRChatAfterCrash" @change="saveOpenVROption")
                     //- Advanced | VRChat Quit Fix
-                    template(v-if="!isLinux")
+                    template(v-if="!isLinux()")
                         span.sub-header {{ $t('view.settings.advanced.advanced.vrchat_quit_fix.header') }}
                         div.options-container-item
                             span.name(style="min-width:300px") {{ $t('view.settings.advanced.advanced.vrchat_quit_fix.description') }}
@@ -543,7 +543,7 @@ mixin settingsTab()
                         span.name(style="min-width:300px") {{ $t('view.settings.advanced.advanced.auto_cache_management.description') }}
                         el-switch(v-model="autoSweepVRChatCache" @change="saveOpenVROption")
                     //- Advanced | Disable local world database
-                    template(v-if="!isLinux")
+                    template(v-if="!isLinux()")
                         span.sub-header {{ $t('view.settings.advanced.advanced.local_world_persistence.header') }}
                         div.options-container-item
                             span.name(style="min-width:300px") {{ $t('view.settings.advanced.advanced.local_world_persistence.description') }}
@@ -577,7 +577,7 @@ mixin settingsTab()
                     div.options-container-item
                         el-button(size="small" icon="el-icon-user-solid" @click="showAvatarProviderDialog") {{ $t('view.settings.advanced.advanced.remote_database.avatar_database_provider') }}
                 //- Advanced | Automatic App Launcher
-                template(v-if="!isLinux")
+                template(v-if="!isLinux()")
                     +simpleSettingsCategory("view.settings.advanced.advanced.app_launcher.header")
                         br
                         el-button(size="small" icon="el-icon-folder" @click="openShortcutFolder()" style="margin-top:5px") {{ $t('view.settings.advanced.advanced.app_launcher.folder') }}
@@ -614,7 +614,7 @@ mixin settingsTab()
                     div.options-container-item
                         el-button(size="small" icon="el-icon-caret-right" @click="showYouTubeApiDialog") {{ $t('view.settings.advanced.advanced.youtube_api.youtube_api_key') }}
                 //- Advanced | Video Progress Pie
-                div.options-container(v-if="!isLinux")
+                div.options-container(v-if="!isLinux()")
                     span.header {{ $t('view.settings.advanced.advanced.video_progress_pie.header') }}
                     div.options-container-item
                         span.name {{ $t('view.settings.advanced.advanced.video_progress_pie.enable') }}
