--- a/html/src/mixins/tabs/settings.pug
+++ b/html/src/mixins/tabs/settings.pug
@@ -557,6 +557,9 @@ mixin settingsTab()
                     div.options-container-item
                         span.name(style="min-width:300px") {{ $t('view.settings.advanced.advanced.save_instance_prints_to_file.description') }}
                         el-switch(v-model="saveInstancePrints" @change="saveVRCXWindowOption")
+                        br
+                        span.name(style="min-width:300px") {{ $t('view.settings.advanced.advanced.save_instance_prints_to_file.crop') }}
+                        el-switch(v-model="cropInstancePrints" @change="cropPrintsChanged")
                     span.sub-header {{ $t('view.settings.advanced.advanced.save_instance_stickers_to_file.header') }}
                     div.options-container-item
                         span.name(style="min-width:300px") {{ $t('view.settings.advanced.advanced.save_instance_stickers_to_file.description') }}
