Refactor moderation tab

--- a/src/index.pug
+++ b/src/index.pug
@@ -71,8 +71,7 @@ html
                 +friendLogTab()
 
                 //- moderation
-                include ./mixins/tabs/moderation.pug
-                +moderationTab()
+                moderation-tab(v-if="$refs.menu && $refs.menu.activeIndex === 'moderation'" :moderation-state='API' :table-data='playerModerationTable' :show-user-dialog='showUserDialog' :shift-held='shiftHeld' :delete-player-moderation="deletePlayerModeration" :delete-player-moderation-prompt="deletePlayerModerationPrompt")
 
                 //- notification
                 include ./mixins/tabs/notifications.pug
