Tracking time when swapping avis

--- a/src/mixins/dialogs/avatarDialog.pug
+++ b/src/mixins/dialogs/avatarDialog.pug
@@ -101,10 +101,15 @@ mixin avatarDialog()
                                 span.name {{ $t('dialog.avatar.info.version') }}
                                 span.extra(v-if="avatarDialog.ref.version !== 0" v-text="avatarDialog.ref.version")
                                 span.extra(v-else) -
-                        .x-friend-item(style="width:100%;cursor:default")
+                        .x-friend-item(style="cursor:default")
                             .detail
                                 span.name {{ $t('dialog.avatar.info.platform') }}
                                 span.extra(v-if="avatarDialogPlatform" v-text="avatarDialogPlatform")
+                                span.extra(v-else) -
+                        .x-friend-item(style="cursor:default")
+                            .detail
+                                span.name {{ $t('dialog.avatar.info.time_spent') }}
+                                span.extra(v-if="avatarDialog.timeSpent" v-text="avatarDialog.ref.timeSpent") 
                                 span.extra(v-else) -
                 el-tab-pane(:label="$t('dialog.avatar.json.header')")
                     el-button(type="default" @click="refreshAvatarDialogTreeData()" size="mini" icon="el-icon-refresh" circle)
