--- a/src/mixins/friendsListSidebar.pug
+++ b/src/mixins/friendsListSidebar.pug
@@ -18,7 +18,7 @@ mixin friendsListSidebar()
                 el-button(type="default" @click="directAccessPaste" size="mini" icon="el-icon-discover" circle)
             el-tooltip(placement="bottom" :content="$t('side_panel.refresh_tooltip')" :disabled="hideTooltips")
                 el-button(type="default" @click="refreshFriendsList" :loading="API.isRefreshFriendsLoading" size="mini" icon="el-icon-refresh" circle style="margin-right:10px")
-        el-tabs.zero-margin-tabs(stretch="true" style="height:calc(100% - 60px;margin-top:5px")
+        el-tabs.zero-margin-tabs(stretch="true" style="height:calc(100% - 60px);margin-top:5px")
             el-tab-pane
                 template(#label)
                     span {{ $t('side_panel.friends') }}
