--- a/src/mixins/friendsListSidebar.pug
+++ b/src/mixins/friendsListSidebar.pug
@@ -101,13 +101,17 @@ mixin friendsListSidebar()
             el-tab-pane
                 template(#label)
                     span {{ $t('side_panel.groups') }}
-                    span(style="color:#909399;font-size:12px;margin-left:10px") ({{ groupInstances.length }})
-                .x-friend-list(style="padding:10px 5px")
-                    .x-friend-item(v-for="ref in groupInstances" :key="ref.instance.id" @click="showGroupDialog(ref.instance.ownerId)")
-                        .avatar
-                            img(v-lazy="ref.group.iconUrl")
-                        .detail
-                            span.name
-                                span(v-text="ref.group.name")
-                                span(style="font-weight:normal;margin-left:5px") ({{ ref.instance.userCount }}/{{ ref.instance.capacity }})
-                            location.extra(:location="ref.instance.location" :link="false")
+                    span(style="color:#909399;font-size:12px;margin-left:10px") ({{ groupInstances.flat().length }})
+                template(v-if="groupInstances.length !== 0" v-for="(group, index) in groupInstances" :key="group[0].group.groupId")
+                    .x-friend-group.x-link(@click="this.groupInstances[index].isCollapsed = !this.groupInstances[index].isCollapsed")
+                            i.el-icon-arrow-right(:class="{ rotate: true }")
+                            span(style="margin-left:5px") {{ group[0].group.name }} &horbar; {{ group.length }}
+                    .x-friend-list(style="padding:10px 5px")
+                        .x-friend-item(v-for="ref in group" :key="ref.instance.id" @click="showGroupDialog(ref.instance.ownerId)")
+                            .avatar
+                                img(v-lazy="ref.group.iconUrl")
+                            .detail
+                                span.name
+                                    span(v-text="ref.group.name")
+                                    span(style="font-weight:normal;margin-left:5px") ({{ ref.instance.userCount }}/{{ ref.instance.capacity }})
+                                location.extra(:location="ref.instance.location" :link="false")
